[gd_scene load_steps=4 format=2]

[ext_resource path="res://mainHUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="MainHuD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
margin_left = 216.0
margin_right = 264.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 144.0
margin_top = 528.0
margin_right = 336.0
margin_bottom = 624.0
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Message" type="Label" parent="."]
margin_left = 56.0
margin_top = 264.0
margin_right = 422.0
margin_bottom = 423.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the 
	Mobs!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
